# ee205_lab_08d_animal_farm_1_to_clion

./: CMakeLists.txt  addCats.cpp  addCats.h  catDatabase.cpp  catDatabase.h  config.h  deleteCats.cpp  deleteCats.h  main.cpp  reportCats.cpp  reportCats.h  updateCats.cpp  updateCats.h
src/: addCats.h  main.cpp  updateCats.h
